--- a/projects/javascript/public/index.html
+++ b/projects/javascript/public/index.html
@@ -7,13 +7,20 @@
     <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
-    <div class="chat-container">
-      <h1>AI Chat</h1>
-      <div id="chatMessages" class="chat-messages"></div>
-      <form id="chatForm" class="chat-form">
-        <input type="text" id="messageInput" placeholder="Type your message..." required>
-        <button type="submit">Send</button>
-      </form>
+    <div class="app-container">
+      <div class="chat-history">
+        <h2>Chat History</h2>
+        <button id="newChatBtn">开始新对话</button>
+        <ul id="chatHistoryList"></ul>
+      </div>
+      <div class="chat-container">
+        <h1>AI Chat</h1>
+        <div id="chatMessages" class="chat-messages"></div>
+        <form id="chatForm" class="chat-form">
+          <input type="text" id="messageInput" placeholder="Type your message..." required>
+          <button type="submit">Send</button>
+        </form>
+      </div>
     </div>
     <script src="/aiChat.js"></script>
   </body>
