remove python code. add chat style setting

--- a/projects/javascript/public/index.html
+++ b/projects/javascript/public/index.html
@@ -20,6 +20,13 @@
           <input type="text" id="messageInput" placeholder="Type your message..." required>
           <button type="submit">Send</button>
         </form>
+        <div id="systemPrompts" class="system-prompts">
+          <button class="prompt-btn active" data-prompt="default">Default</button>
+          <button class="prompt-btn" data-prompt="professional">Professional</button>
+          <button class="prompt-btn" data-prompt="creative">Creative</button>
+          <button class="prompt-btn" data-prompt="friendly">Friendly</button>
+          <button class="prompt-btn" data-prompt="academic">Academic</button>
+        </div>
       </div>
     </div>
     <script src="/aiChat.js"></script>
